mobile: about me,hackathons margin- fixed
previous commit fixed the formatting of the sections so they fit the whole screen, still needed to adjust the margins so the first two sections don't overlap

--- a/index.css
+++ b/index.css
@@ -53,8 +53,8 @@ main {
         padding: 20px;
     }
 
-    .about-me, .hackathons {
-        margin: 50px;
+    .about-me {
+        margin-bottom: 150px;
     }
 
     .inner-container8 .project-preview, .inner-container9 .project-preview {
